kubernetes-config/frontend_deploy.yml
# nginx Web Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aduno-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aduno-frontend
  template:
    metadata:
      labels:
        app: aduno-frontend
    spec:
      containers:
        - name: aduno-frontend
          image: registry.cloud.htl-leonding.ac.at/s.rausch-schott/aduno-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aduno-frontend-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: aduno-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aduno-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /s.rausch-schott/aduno/frontend(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
